[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://script/UpgradeShop.gd" id="1"]

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Shop"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Money: $100"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SpeedUpgrade" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SpeedUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Faster Inspection (2x speed)"

[node name="BuyButton" type="Button" parent="VBoxContainer/SpeedUpgrade"]
layout_mode = 2
text = "Buy ($50)"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartDayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Next Day"
